--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "pg": "^8.13.2",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "vite": "^6.1.0"
   }
 }
