--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "nodemailer": "^6.10.0",
     "pg": "^8.13.2",
     "swagger-ui-express": "^5.0.1",
     "vite": "^6.1.0"
