--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
@@ -29,6 +30,7 @@
     "pg": "^8.13.2",
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.12.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "winston": "^3.17.0"
   }
 }
