--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.12.0",
     "vite": "^6.1.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
