Modificacion Swagger e Implementación express-jdosc-swagger. Implementación métodos de cargue de imágenes, trataiento de imágenes y middleware para manejar cargue de imágenes.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start:ngrok": "NODE_ENV=development NGROK_URL=https://tu-url-ngrok.ngrok-free.app nodemon app.js",
     "start:prod": "NODE_ENV=production node app.js",
     "generate-swagger": "node generate-swagger.js",
-    "start": "npm run generate-swagger && node app.js"
+    "start": "npm run generate-swagger && node app.js",
+    "dev": "nodemon app.js",
+    "swagger-gen": "node scripts/generate-swagger.js",
+    "swagger-autogen": "swagger-jsdoc -d src/config/swagger.js -o public/swagger.json",
+    "prestart": "npm run swagger-gen",
+    "predev": "npm run swagger-gen"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-jsdoc-swagger": "^1.8.0",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
@@ -28,7 +34,7 @@
     "nodemailer": "^6.10.0",
     "password-validator": "^5.3.0",
     "pg": "^8.13.2",
-    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
     "validator": "^13.12.0",
     "vite": "^6.1.0",
     "winston": "^3.17.0",
