--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "nodemailer": "^6.10.0",
     "password-validator": "^5.3.0",
     "pg": "^8.13.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
     "validator": "^13.12.0",
     "vite": "^6.1.0",
