--- a/package.json
+++ b/package.json
@@ -4,16 +4,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "NODE_ENV=development nodemon app.js",
-    "start:ngrok": "NODE_ENV=development NGROK_URL=https://tu-url-ngrok.ngrok-free.app nodemon app.js",
-    "start:prod": "NODE_ENV=production node app.js",
-    "generate-swagger": "node generate-swagger.js",
-    "start": "npm run generate-swagger && node app.js",
-    "dev": "nodemon app.js",
-    "swagger-gen": "node scripts/generate-swagger.js",
-    "swagger-autogen": "swagger-jsdoc -d src/config/swagger.js -o public/swagger.json",
-    "prestart": "npm run swagger-gen",
-    "predev": "npm run swagger-gen"
+  "start:dev": "NODE_ENV=development nodemon app.js",
+  "start:ngrok": "NODE_ENV=development NGROK_URL=https://tu-url-ngrok.ngrok-free.app nodemon app.js",
+  "start:prod": "NODE_ENV=production node app.js",
+  "generate-swagger": "node scripts/generate-swagger.js",
+  "start": "npm run generate-swagger && node app.js",
+  "dev": "npm run generate-swagger && nodemon app.js"
   },
   "keywords": [],
   "author": "",
