--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-  "start:dev": "NODE_ENV=development nodemon app.js",
-  "start:ngrok": "NODE_ENV=development NGROK_URL=https://tu-url-ngrok.ngrok-free.app nodemon app.js",
-  "start:prod": "NODE_ENV=production node app.js",
-  "generate-swagger": "node scripts/generate-swagger.js",
-  "start": "npm run generate-swagger && node app.js",
-  "dev": "npm run generate-swagger && nodemon app.js"
+    "start:dev": "NODE_ENV=development nodemon app.js",
+    "start:ngrok": "NODE_ENV=development NGROK_URL=https://tu-url-ngrok.ngrok-free.app nodemon app.js",
+    "start:prod": "NODE_ENV=production node app.js",
+    "generate-swagger": "node scripts/generate-swagger.js",
+    "start": "npm run generate-swagger && node app.js",
+    "dev": "npm run generate-swagger && nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
     "express-jsdoc-swagger": "^1.8.0",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
