--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "cron-parser": "^5.0.4",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
@@ -30,6 +31,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "password-validator": "^5.3.0",
     "pg": "^8.13.2",
