--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "description": "",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cron-parser": "^5.0.4",
