--- a/src/views/frontend/LoginArtesa/package.json
+++ b/src/views/frontend/LoginArtesa/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1",
     "tailwind-scrollbar": "^4.0.1"
   },
   "devDependencies": {
@@ -39,5 +40,4 @@
     "tailwindcss": "^3.4.17",
     "vite": "^6.1.1"
   }
-  
 }
