--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemailer": "^6.10.0",
     "password-validator": "^5.3.0",
     "pg": "^8.13.2",
+    "recharts": "^2.15.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
