--- a/src/views/frontend/LoginArtesa/package.json
+++ b/src/views/frontend/LoginArtesa/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "recharts": "^2.15.1",
