--- a/src/views/frontend/LoginArtesa/package.json
+++ b/src/views/frontend/LoginArtesa/package.json
@@ -4,15 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npm run sass:build && vite",
-    "build": "npm run sass:build && vite build",
-    "sass:build": "node --no-warnings scripts/generate-css.js",
-    "sass:watch": "sass --watch src:src",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "purge": "purgecss --config purgecss.config.js --output dist/css/",
-    "build:prod": "npm run build && npm run purge"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "build:staging": "vite build --mode staging",
+  "preview": "vite preview",
+  "preview:staging": "vite preview --mode staging"
+},
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
     "@types/react-datepicker": "^6.2.0",
