--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "vite": "^6.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^3.0.5"
   }
 }
