--- a/src/views/frontend/LoginArtesa/package.json
+++ b/src/views/frontend/LoginArtesa/package.json
@@ -4,15 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "ngrok": "vite --config vite.config.js --mode ngrok --host",
-  "dev:host": "vite --host",
-  "dev:ngrok": "vite --mode ngrok --host",
-  "dev:ngrok-env": "vite --mode ngrok --config vite.config.ngrok.js --env-file .env.ngrok",
-  "build": "vite build",
-  "build:ngrok": "vite build --mode ngrok",
-  "preview": "vite preview"
-},
+    "dev": "vite",
+    "ngrok": "vite --config vite.config.js --mode ngrok --host",
+    "dev:host": "vite --host",
+    "dev:ngrok": "vite --mode ngrok --host",
+    "dev:ngrok-env": "vite --mode ngrok --config vite.config.ngrok.js --env-file .env.ngrok",
+    "build": "vite build",
+    "build:ngrok": "vite build --mode ngrok",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
     "@types/react-datepicker": "^6.2.0",
@@ -26,6 +26,7 @@
     "react-google-recaptcha-v3": "^1.10.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "react-select": "^5.10.1",
     "recharts": "^2.15.1",
     "tailwind-scrollbar": "^4.0.1"
   },
