--- a/src/views/frontend/LoginArtesa/package.json
+++ b/src/views/frontend/LoginArtesa/package.json
@@ -4,13 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "ngrok": "vite --config vite.config.js --mode ngrok --host",
-  "dev:host": "vite --host",
-  "dev:ngrok": "vite --mode ngrok --host",
-  "build": "vite build",
-  "build:ngrok": "vite build --mode ngrok",
-  "preview": "vite preview"
+    "dev": "vite",
+    "ngrok": "vite --config vite.config.js --mode ngrok --host",
+    "dev:host": "vite --host",
+    "dev:ngrok": "vite --mode ngrok --host",
+    "build": "vite build",
+    "build:ngrok": "vite build --mode ngrok",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
@@ -19,12 +19,14 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "react-select": "^5.10.1",
     "recharts": "^2.15.1",
     "tailwind-scrollbar": "^4.0.1"
   },
