--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "laartesa",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "NODE_ENV=development nodemon app.js",
