Elastic BeansTalk Deployment

--- a/.ebignore
+++ b/.ebignore
@@ -1,10 +1,17 @@
 node_modules/
 *.log
 .git/
-src/views/frontend/LoginArtesa/node_modules/
-src/views/frontend/LoginArtesa/dist/
+.gitignore
+src/views/frontend/LoginArtesa/
 uploads/
 logs/
 .env.development
 .env.local
 .env.ngrok
+.env.production
+README.md
+CHANGELOG.md
+docs/
+scripts/
+tests/
+tmp/
