--- a/.ebextensions/01-nodejs.config
+++ b/.ebextensions/01-nodejs.config
@@ -1,6 +1,6 @@
 option_settings:
   aws:elasticbeanstalk:container:nodejs:
-    NodeVersion: 18.x
+    NodeCommand: "npm start"
   aws:elasticbeanstalk:application:environment:
-    NODE_ENV: staging
-    PORT: 8080
+    NODE_ENV: production
+    NPM_USE_PRODUCTION: true
