Changes Elastic Beanstalk environment configuration

--- a/.ebextensions/02-environment.config
+++ b/.ebextensions/02-environment.config
@@ -1,14 +1,27 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
-    DB_HOST: [TU_ENDPOINT_RDS_ACTUAL]
+    NODE_ENV: production
+    PORT: 8080
+    DB_HOST: artesa-dev-db.csbsswgcszct.us-east-1.rds.amazonaws.com
     DB_USER: artesa_admin_dev
+    DB_PASSWORD: H+MbQeThWmZq4t7w!
     DB_DATABASE: artesa-dev-db
     DB_PORT: 5432
+    JWT_SECRET: 'p2s5v8y/B?E(H+MbQeThWmZq4t7w!z%C'
     CORS_ALLOW_ALL_IN_DEV: false
     STORAGE_MODE: s3
     AWS_REGION: us-east-1
+    AWS_S3_BUCKET_NAME: artesa-documents-staging
+    S3_URL_EXPIRATION: 3600
+    SMTP_HOST: sandbox.smtp.mailtrap.io
+    SMTP_PORT: 587
+    SMTP_USER: 08664dae585774
+    SMTP_PASS: 70ae7b88df0748
+    SMTP_FROM: noreply@laartesa.com
+    FRONTEND_URL: https://d1bqegutwmfn98.cloudfront.net/
     SAP_SERVICE_LAYER_URL: https://solidda-sl.heinsohncloud.com.co:50000/b1s/v2
     SAP_USERNAME: manager
+    SAP_PASSWORD: manager
     SAP_COMPANY_DB: MOVII_PRUEBAS
     SAP_SYNC_SCHEDULE: "0 0 * * *"
     SAP_IMAGES_BASE_URL: https://solidda-sl.heinsohncloud.com.co:50000/b1s/v2/Attachments2
@@ -19,5 +32,6 @@ option_settings:
     RATE_LIMIT_SENSITIVE: 500
     RATE_LIMIT_WINDOW: 900000
     RECAPTCHA_ENABLED: true
+    RECAPTCHA_SECRET_KEY: 6LdEtQkrAAAAAOUlmVjLM6mGDjyT3jEpgEdsyYwI
     RECAPTCHA_MIN_SCORE: 0.5
     RECAPTCHA_BYPASS: false
