--- a/.ebextensions/02-environment.config
+++ b/.ebextensions/02-environment.config
@@ -1,14 +1,17 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
-    NODE_ENV: production
+    NODE_ENV: development
     PORT: 8080
+    NPM_CONFIG_PRODUCTION: false
+    DEBUG: "*"
+    LOG_LEVEL: debug
     DB_HOST: artesa-dev-db.csbsswgcszct.us-east-1.rds.amazonaws.com
     DB_USER: artesa_admin_dev
     DB_PASSWORD: H+MbQeThWmZq4t7w!
     DB_DATABASE: artesa-dev-db
     DB_PORT: 5432
     JWT_SECRET: 'p2s5v8y/B?E(H+MbQeThWmZq4t7w!z%C'
-    CORS_ALLOW_ALL_IN_DEV: false
+    CORS_ALLOW_ALL_IN_DEV: true
     STORAGE_MODE: s3
     AWS_REGION: us-east-1
     AWS_S3_BUCKET_NAME: artesa-documents-staging
