Fixing Elastic Beanstalk errors

--- a/.ebextensions/04-app.config
+++ b/.ebextensions/04-app.config
@@ -3,3 +3,14 @@ option_settings:
     Application Healthcheck URL: /api/health
   aws:elasticbeanstalk:healthreporting:system:
     SystemType: enhanced
+    HealthCheckSuccessThreshold: Ok
+    HealthCheckGracePeriod: 300
+    EnhancedHealthAuthEnabled: true
+  aws:elasticbeanstalk:environment:
+    LoadBalancerType: application
+    ServiceRole: aws-elasticbeanstalk-service-role
+  aws:autoscaling:asg:
+    MinSize: 1
+    MaxSize: 2
+  aws:ec2:instances:
+    InstanceTypes: t3.small,t3.medium
