--- a/.ebextensions/01-nodejs.config
+++ b/.ebextensions/01-nodejs.config
@@ -1,4 +1,8 @@
 option_settings:
+  aws:elasticbeanstalk:container:nodejs:
+    NodeCommand: "npm run start"
+    ProxyServer: nginx
   aws:elasticbeanstalk:application:environment:
-    NODE_ENV: production
-    NPM_USE_PRODUCTION: true
+    NODE_ENV: development
+    NPM_USE_PRODUCTION: false
+    NPM_CONFIG_PRODUCTION: false
