--- a/.ebextensions/03-nginx.config
+++ b/.ebextensions/03-nginx.config
@@ -1,9 +1,17 @@
 files:
-  "/etc/nginx/conf.d/gzip.conf":
+  "/etc/nginx/conf.d/dev-settings.conf":
     mode: "000644"
     owner: root
     group: root
     content: |
+      # Configuración específica para desarrollo
+      client_max_body_size 50M;
+      
+      # Configuración de logs más detallada
+      access_log /var/log/nginx/access.log main;
+      error_log /var/log/nginx/error.log debug;
+      
+      # Gzip configuration
       gzip on;
       gzip_comp_level 4;
       gzip_types
@@ -14,7 +22,19 @@ files:
           text/xml
           application/xml
           application/xml+rss
-          text/javascript;
+          text/javascript
+          application/pdf;
+
+  "/etc/nginx/conf.d/cors.conf":
+    mode: "000644"
+    owner: root
+    group: root
+    content: |
+      # CORS permisivo para desarrollo
+      add_header 'Access-Control-Allow-Origin' '*' always;
+      add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+      add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+      add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
 
 commands:
   01_reload_nginx:
