--- a/.ebextensions/05-commands.config
+++ b/.ebextensions/05-commands.config
@@ -1,8 +1,19 @@
 commands:
-  01_node_install:
-    command: "yum install -y nodejs npm"
+  01_update_yum:
+    command: "yum update -y"
     ignoreErrors: true
-  02_npm_install:
+  02_install_node:
+    command: "curl -fsSL https://rpm.nodesource.com/setup_20.x | bash - && yum install -y nodejs"
+    ignoreErrors: true
+  03_verify_node:
+    command: "node --version && npm --version"
+    ignoreErrors: true
+
+container_commands:
+  01_npm_install:
     command: "npm install"
+    cwd: "/var/app/staging"
+  02_generate_docs:
+    command: "npm run generate-swagger"
     cwd: "/var/app/staging"
     ignoreErrors: true
