--- a/.ebextensions/00-platform.config
+++ b/.ebextensions/00-platform.config
@@ -1,10 +1,11 @@
 option_settings:
   aws:elasticbeanstalk:container:nodejs:
     ProxyServer: nginx
-  aws:elasticbeanstalk:container:nodejs:staticfiles:
+  aws:elasticbeanstalk:environment:staticfiles:
     /static: public
     /uploads: uploads
   aws:elasticbeanstalk:environment:process:default:
     HealthCheckPath: /api/health
     Port: 8080
     Protocol: HTTP
+    MatcherHTTPCode: 200
