--- a/.ebextensions/03-nginx.config
+++ b/.ebextensions/03-nginx.config
@@ -1,3 +1,6 @@
+option_settings:
+  aws:elasticbeanstalk:environment:proxy:
+    ProxyServer: nginx
 files:
   "/etc/nginx/conf.d/dev-settings.conf":
     mode: "000644"
