Saving Changes Elastic

--- a/.ebextensions/00-platform.config
+++ b/.ebextensions/00-platform.config
@@ -1,7 +1,7 @@
 option_settings:
   aws:elasticbeanstalk:container:nodejs:
     ProxyServer: nginx
-  aws:elasticbeanstalk:environment:staticfiles:
+  aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: public
     /uploads: uploads
   aws:elasticbeanstalk:environment:process:default:
@@ -9,3 +9,5 @@ option_settings:
     Port: 8080
     Protocol: HTTP
     MatcherHTTPCode: 200
+    StickySessionsEnabled: false
+    StickySessionsCookieName: AWSALB
