--- a/.ebextensions/02-environment.config
+++ b/.ebextensions/02-environment.config
@@ -38,3 +38,6 @@ option_settings:
     RECAPTCHA_SECRET_KEY: 6LdEtQkrAAAAAOUlmVjLM6mGDjyT3jEpgEdsyYwI
     RECAPTCHA_MIN_SCORE: 0.3
     RECAPTCHA_BYPASS: false
+    # Configuración de rutas estáticas
+    STATIC_FILES_PATH: /var/app/current/public
+    UPLOADS_PATH: /var/app/current/uploads
