--- a/.ebextensions/04-app.config
+++ b/.ebextensions/04-app.config
@@ -12,3 +12,11 @@ option_settings:
     MaxSize: 2
   aws:ec2:instances:
     InstanceTypes: t3.small,t3.medium
+  aws:autoscaling:launchconfiguration:
+    IamInstanceProfile: aws-elasticbeanstalk-ec2-role
+    SecurityGroups: default
+  aws:autoscaling:trigger:
+    MeasureName: CPUUtilization
+    Unit: Percent
+    UpperThreshold: 80
+    LowerThreshold: 20
