--- a/.ebextensions/05-commands.config
+++ b/.ebextensions/05-commands.config
@@ -17,3 +17,7 @@ container_commands:
     command: "npm run generate-swagger"
     cwd: "/var/app/staging"
     ignoreErrors: true
+
+00_create_directories:
+    command: "mkdir -p /var/app/current/uploads /var/app/current/tmp /var/app/current/logs"
+    ignoreErrors: true
