--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       - CORS_ALLOW_ALL_IN_DEV=${CORS_ALLOW_ALL_IN_DEV}
       - CORS_ALLOW_ALL_IN_DEV=true
       - DEV_FRONTEND_URL=https://d1bqegutwmfn98.cloudfront.net
+      - CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,https://d1bqegutwmfn98.cloudfront.net,http://ec2-44-216-131-63.compute-1.amazonaws.com,https://ec2-44-216-131-63.compute-1.amazonaws.com
     volumes:
       - artesa-uploads:/app/uploads
       - artesa-logs:/app/logs
