Fixes CORS CloudFront

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -39,9 +39,10 @@ server {
         proxy_read_timeout 60s;
         # Manejar peticiones OPTIONS (CORS preflight)
         if ($request_method = 'OPTIONS') {
+            # Headers CORS para todas las rutas HTTP
             add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;     
             add_header Access-Control-Allow-Credentials "true" always; 
             add_header Access-Control-Max-Age 86400;
             add_header Content-Type "text/plain charset=UTF-8";        
