Changes ngox Cloudfront

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -8,47 +8,47 @@ upstream artesa_app {
 server {
     listen 80;
     server_name ec2-44-216-131-63.compute-1.amazonaws.com _;
-    # Headers CORS para todas las rutas HTTP
-    add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
-    add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-    add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken" always;     
-    add_header Access-Control-Allow-Credentials "true" always;
-
+    
     # Health check para ALB
     location /health {
         proxy_pass http://artesa_app/api/health;
         proxy_set_header Host $host;
     }
 
-    # En producción, descomentar para forzar HTTPS
-    # return 301 https://$server_name$request_uri;
-
-    # Para desarrollo, permitir HTTP
+    # Manejar peticiones OPTIONS específicamente para CORS preflight
     location / {
+        # Headers CORS para todas las solicitudes
+        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+        add_header Access-Control-Allow-Credentials "true" always;
+
+        # Manejar peticiones OPTIONS (CORS preflight)
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+            add_header Access-Control-Allow-Credentials "true" always;
+            add_header Access-Control-Max-Age 86400;
+            add_header Content-Type "text/plain charset=UTF-8";
+            add_header Content-Length 0;
+            return 204;
+        }
+
+        # Proxy a la aplicación Node.js
         proxy_pass http://artesa_app;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;   
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
-        # Manejar peticiones OPTIONS (CORS preflight)
-        if ($request_method = 'OPTIONS') {
-            # Headers CORS para todas las rutas HTTP
-            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;     
-            add_header Access-Control-Allow-Credentials "true" always; 
-            add_header Access-Control-Max-Age 86400;
-            add_header Content-Type "text/plain charset=UTF-8";        
-            add_header Content-Length 0;
-            return 204;
-        }
+        client_max_body_size 50M;
     }
 }
 
