Trabajo actual - 3 días de desarrollo (sin archivos grandes)

--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -7,26 +7,29 @@ upstream artesa_app {
 server {
     listen 80;
     server_name ec2-44-216-131-63.compute-1.amazonaws.com;
+    
     # Health check para ALB - no redirigir
     location /health {
         proxy_pass http://artesa_app/api/health;
         proxy_set_header Host $host;
     }
 
-    # API routes - permitir HTTP para desarrollo pero agregar CORS
+    # API routes - permitir HTTP y manejar CORS
     location /api/ {
-        # Headers CORS para HTTP
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        # Headers CORS más permisivos para desarrollo
+        add_header Access-Control-Allow-Origin $http_origin always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
         add_header Access-Control-Allow-Credentials "true" always;
 
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+            add_header Access-Control-Allow-Origin $http_origin always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
             add_header Access-Control-Allow-Credentials "true" always;
             add_header Access-Control-Max-Age 86400;
+            add_header Content-Type "text/plain charset=UTF-8";
+            add_header Content-Length 0;
             return 204;
         }
 
@@ -36,10 +39,13 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
         client_max_body_size 50M;
     }
 
-    # Para otras rutas, mantener la redirección a HTTPS
+    # Para otras rutas, redirigir a HTTPS
     location / {
         return 301 https://$server_name$request_uri;
     }
@@ -58,44 +64,12 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-
-    # CORS headers
-    add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;       
-    add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-    add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With" always;
-    add_header Access-Control-Allow-Credentials "true" always;
-
+    
     server_tokens off;
 
-    # API routes - permitir HTTP para desarrollo pero agregar CORS
+    # API routes con CORS dinámico
     location /api/ {
-        # Headers CORS más permisivos
-        add_header Access-Control-Allow-Origin $http_origin always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-        add_header Access-Control-Allow-Credentials "true" always;
-
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin $http_origin always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-            add_header Access-Control-Allow-Credentials "true" always;
-            add_header Access-Control-Max-Age 86400;
-            return 204;
-        }
-
-        proxy_pass http://artesa_app;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        client_max_body_size 50M;
-    }
-
-    # Documentación API
-    location /api/ {
-        # Headers CORS que permiten el origin dinámicamente
+        # Headers CORS dinámicos
         add_header Access-Control-Allow-Origin $http_origin always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
@@ -107,6 +81,8 @@ server {
             add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
             add_header Access-Control-Allow-Credentials "true" always; 
             add_header Access-Control-Max-Age 86400;
+            add_header Content-Type "text/plain charset=UTF-8";
+            add_header Content-Length 0;
             return 204;
         }
 
@@ -125,6 +101,15 @@ server {
         client_max_body_size 50M;
     }
 
+    # Documentación API
+    location /api-docs/ {
+        proxy_pass http://artesa_app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Swagger JSON
     location /swagger.json {
         proxy_pass http://artesa_app;
@@ -134,6 +119,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Fallback para otras rutas
     location / {
         proxy_pass http://artesa_app;
         proxy_set_header Host $host;
